# Xdeploy

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  ansible.cfg  avtive.sh  download.py  images.txt  load_code.py  load_images.py  main.py  meta.yml  package.py  package_full.py  package_incremental.py  requirements.txt  run.py  run_ansible.py  tar.py  update.py
ansible/: install_ansible.sh  readme.md
app/: common.py  config.py  loger.py  logger.py  package.py  routes.py  service.py  task.py
docs/: op.md
gaussdb/: gauss.yaml
gitlab-runner/: gitlab-runner.yaml
hoppscotch/: .env.example
inventory/: db_servers.ini  dynamic.py  hosts
jenkins/: cmd.sh
k8s/: delete_images.sh  delete_k8s_images.sh  kubeadm-config.yaml
kafka/: cmd.sh
mysql/: msyql8.yaml
nginx/: docker-compose.yaml
oracle/: oracle.yaml
playbooks/: calico.yml  cgroup_delegation.yml  cgroup_v2.yaml  cgroup_v2.yml  cmd.yml  cni.yml  conntrack.yml  containerd.yml  cri.yml  curl.yml  docker-compose.yml  docker.yml  docker_buildx.yml  docker_compose.yml  (+17 more)
woker/: Cargo.toml  README.md  build.rs  makefile
woker/proto/: agent.proto  ansible.proto  api.proto  ssh.proto
woker/src/: client.rs  client.txt  cluster_config.rs  cluster_images.rs  cluster_init.rs  cluster_node.rs  command.rs  deploy.rs  lib.rs  load_image.rs  main.rs  proto_convert.rs  sftp.rs  ssh_cmd.rs  ssh_connect.rs
woker/tests/: ansible.rs  ansible_pyo3.rs  cluster.yaml  cluster_config.rs  config_yaml.rs  load_image.rs  sftp.rs  sftp_test.rs  ssh.rs  ssh_cmd.rs  ssh_connect.rs  ssh_session.rs
(+177 files in other folders)
