[package]
name = "woker"
version = "0.1.0"
edition = "2024"

[dependencies]
ssh2 = "0.9"
tokio = { version = "1.44.2", features = ["full"] }
# tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
tonic = { version = "0.13.0", features = ["prost"] }
futures = "0.3.31"
prost = "0.13.5"
tokio-stream = "0.1.17"

[dependencies.uuid]
version = "1.16.0"
# Lets you generate random UUIDs
features = [
    "v4",
]

[build-dependencies]
tonic-build = "0.13.0"
