[package]
name = "woker"
version = "0.1.0"
edition = "2024"

[dependencies]
ssh2 = "0.9"
tokio = { version = "1.44.2", features = ["full"] }
tonic = { version = "0.13.0", features = ["prost"] }
futures = "0.3.31"
# prost = "0.13.5"
prost = { version = "0.13.5", features = ["derive"] } #
tokio-stream = "0.1.17"

serde_json = "1.0.140"
prost-types = "0.13.5"
futures-core = "0.3.31"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
serde-value = "0.7.0"
rand = "0.9.1"
pyo3 = "0.24.2"
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive"] }
rayon = "1.10.0"
log = "0.4.27"
simple_logger = "5.0.0"

[dependencies.uuid]
version = "1.16.0"
# Lets you generate random UUIDs
features = [
    "v4",
]

[build-dependencies]
tonic-build = "0.13.0"
